appId: com.taqucinco.soft_icecream_notes.icecream_log
---
# 初期状態にする
- clearState
# アプリ起動
- launchApp
- tapOn: "設定"
- assertVisible: "ニックネーム"
- waitForAnimationToEnd
- assertVisible: "アイコンを変更"
